Fixed issue with top bar on small screens
Changed font size to 8px for small screens, logo size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
-html,
-body {
+html {
     font-size: 10px;
 }
 
@@ -17,6 +16,8 @@ nav {
             height: 100%;
             
             img {
+                width: 69px;
+                height: 59px;
                 margin-top: 20px;
             }   
         }
@@ -426,14 +427,27 @@ footer {
 
 /* Tiny */
 @media screen and (max-width: 570px) {
-       
+    
+    html {
+        font-size: 8px;   
+    }
+    
+    #logo-wrapper a img {
+        width: 49px !important;
+        height: auto !important;
+        margin-top: 25px !important;    
+    }   
+    
+    main #top-section #top-section-content h1 span {
+        font-size: 8rem;
+    }
     
     footer {
         #copyright,
         #attrib {
-            float: none;
-            display: block;
-            text-align: center;
+            float: none !important;
+            display: block !important;
+            text-align: center !important;
         }
     }
 }
